--- a/0-bootstrap/single-cluster/1-infra/argocd/serviceaccounts-cp4ba.yaml
+++ b/0-bootstrap/single-cluster/1-infra/argocd/serviceaccounts-cp4ba.yaml
@@ -1,19 +1,24 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: sync-global-pullsecret
+  name: sa-cp4ba
   labels:
     gitops.tier.layer: infra
   annotations:
     argocd.argoproj.io/sync-wave: "100"
 spec:
   destination:
-    namespace: tools
+    namespace: cp4ba
     server: https://kubernetes.default.svc
   project: infra
   source:
-    path: daemonsets/roks-sync-global-pullsecret
+    path: serviceaccounts/cp4ba
   syncPolicy:
     automated:
       prune: true
       selfHeal: true
+  ignoreDifferences:
+  - group: ""
+    kind: ServiceAccount
+    jsonPointers:
+    - /imagePullSecrets
