--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -2,7 +2,7 @@ resources:
 # IBM Software
 - argocd/operators/ibm-catalogs.yaml
 - argocd/instances/sealed-secrets.yaml
-# - argocd/operators/ibm-cp4a-operator.yaml  
+- argocd/operators/ibm-cp4a-operator.yaml  
 ## Cloud Pak for Integration
 # - argocd/operators/ibm-ace-operator.yaml
 #- argocd/operators/ibm-apic-operator.yaml
