push instance deployment
Signed-off-by: therayy <raafat@ibm.com>

--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -2,7 +2,8 @@ resources:
 # IBM Software
 - argocd/operators/ibm-catalogs.yaml
 - argocd/instances/sealed-secrets.yaml
-- argocd/operators/ibm-cp4a-operator.yaml  
+- argocd/operators/ibm-cp4a-operator.yaml 
+# - argocd/instances/ibm-cp4ba-odm.yaml
 ## Cloud Pak for Integration
 # - argocd/operators/ibm-ace-operator.yaml
 #- argocd/operators/ibm-apic-operator.yaml
